infra/k8s/auth-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-python
  labels:
    tags.datadoghq.com/env: demo
    tags.datadoghq.com/service: auth-python
    tags.datadoghq.com/version: "0.1.0"
spec:
  replicas: 1
  selector: { matchLabels: { app: auth-python } }
  template:
    metadata:
      labels: 
        app: auth-python
        tags.datadoghq.com/env: demo
        tags.datadoghq.com/service: auth-python
        tags.datadoghq.com/version: "0.1.0"
        admission.datadoghq.com/enabled: "true"
      annotations:
        ad.datadoghq.com/auth-python.logs: |
          [{"source":"python","service":"auth-python"}]
        admission.datadoghq.com/python-lib.version: 3.10.0
    spec:
      containers:
      - name: auth-python
        image: 222066942551.dkr.ecr.ap-northeast-2.amazonaws.com/datadog-runner/auth-python:latest
        ports:
        - containerPort: 8000
        readinessProbe: { httpGet: { path: "/auth/logout", port: 8000 }, initialDelaySeconds: 5 }
---
apiVersion: v1
kind: Service
metadata: { name: auth-python-svc }
spec:
  selector: { app: auth-python }
  ports: [{ port: 8000, targetPort: 8000 }]
