infra/k8s/chat-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: chat-node
  labels:
    tags.datadoghq.com/env: demo
    tags.datadoghq.com/service: chat-node
    tags.datadoghq.com/version: "0.1.0"
spec:
  replicas: 1
  selector: { matchLabels: { app: chat-node } }
  template:
    metadata:
      labels: 
        app: chat-node
        tags.datadoghq.com/env: demo
        tags.datadoghq.com/service: chat-node
        tags.datadoghq.com/version: "0.1.0"
        admission.datadoghq.com/enabled: "true"
      annotations:
        ad.datadoghq.com/chat-node.logs: |
          [{"source":"nodejs","service":"chat-node"}]
        admission.datadoghq.com/js-lib.version: latest
    spec:
      containers:
      - name: chat-node
        image: 222066942551.dkr.ecr.ap-northeast-2.amazonaws.com/datadog-runner/chat-node:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: { name: chat-node-svc }
spec:
  selector: { app: chat-node }
  ports: [{ port: 8080, targetPort: 8080 }]
